演習2-3 ボックス変更１回目

--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -4,12 +4,13 @@ p {
 
 p.info {
 	font-size: small;
-	color: #dfdfdf
+	background-color: #dfdfdf;
+	color: navy
 }
 
 h1 {
 	text-shadow: navy 1px 0 10px;
-	color: #dfdfdf
+	color: white
 }
 
 h2 {
@@ -17,13 +18,15 @@ h2 {
 	margin: 5px;
 }
 
-div#zentai {
-	display: flex;
-	flex-direction: row;
-	width: 1024px;
+div.zentai {
+    display: grid;                      /* グリッドレイアウトにする*/
+    grid-template-columns: 1fr 1fr; /* 3列にする．幅は 1:2:2 の比率*/
+    grid-auto-rows: 200px 200px;        /* 高さは 100px */
+    grid-gap: 10px;                     /* 隣り合う行（列）の間隔を 10px に*/
+	padding: 5px
+    width 500px;
 }
 
-div#zentai > div {
-	margin-left: 5px;
-	background-color: #ffefaf;
+div.box {
+    background: cornsilk;
 }
