--- a/project.css
+++ b/project.css
@@ -1,3 +1,9 @@
 body{
-    background: linear-gradient(skyblue, white);
+    background: rgb(103, 228, 170);
+}
+p{
+    color: rgb(1, 132, 213);;
+}
+h1{
+    background-color: white;
 }
